# rust-talks

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  events.txt
migrations/2021-03-13-183332_create_talks/: down.sql  up.sql
src/: api.rs  client.rs  db.rs  error.rs  events.rs  handler.rs  main.rs  model.rs  schema.rs  ws.rs
static/: site.js  styles.css
templates/: all.j2  index.html  index.j2
