[package]
name = "rust_talks"
version = "0.1.0"
authors = ["mahonec <mahonec@clarkson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["macros", "sync", "rt-multi-thread"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
futures = { version = "0.3.10", default-features = false }